make better much better - bizzaro

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>jQuery routr</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script type="text/javascript" src="js/lib/jquery-3.1.0.min.js"></script>
+	<!-- <script type="text/javascript" src="js/lib/jquery.routr.js"></script> -->
 	<script type="text/javascript" src="js/lib/jquery.routr.js"></script>
 </head>
 <body>
@@ -24,5 +25,6 @@
 	<div class="west">
 	</div>
 </body>
+<!-- <script type="text/javascript" src="js/src/script.js"></script> -->
 <script type="text/javascript" src="js/src/script.js"></script>
 </html>
